# protheus-dashs

./: README.md  pyproject.toml
dados/: servicos.xlsx
notebooks/: eda.ipynb
